fix main nav back btn link alignment

--- a/src/components/main-navigation/_main-navigation.scss
+++ b/src/components/main-navigation/_main-navigation.scss
@@ -291,7 +291,7 @@
   border: 0;
   display: inline-flex;
   text-decoration: none;
-  vertical-align: middle;
+  align-items: center;
   position: relative;
   left: -8px;
 
